[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/gui/GUIButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/menus/stats/stat_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/GUILabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 5 )

[node name="stat_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.498039 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 740.0
margin_top = 451.0
margin_right = 1180.0
margin_bottom = 629.0
alignment = 1

[node name="GUILabel" parent="CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 440.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "You Failed!"
align = 1
valign = 1

[node name="player_stat_cards" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 440.0
margin_bottom = 106.0
alignment = 1

[node name="button_container" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 440.0
margin_bottom = 178.0

[node name="buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer/button_container"]
margin_left = 95.0
margin_right = 345.0
margin_bottom = 68.0

[node name="button_mainmenu" parent="CenterContainer/VBoxContainer/button_container/buttons" instance=ExtResource( 1 )]
margin_right = 250.0
margin_bottom = 32.0
rect_min_size = Vector2( 250, 0 )
text = "Return to Main Menu"

[node name="button_exit" parent="CenterContainer/VBoxContainer/button_container/buttons" instance=ExtResource( 1 )]
margin_top = 36.0
margin_right = 250.0
margin_bottom = 68.0
rect_min_size = Vector2( 250, 0 )
text = "Exit to Desktop"
[connection signal="pressed" from="CenterContainer/VBoxContainer/button_container/buttons/button_mainmenu" to="." method="_on_button_mainmenu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/button_container/buttons/button_exit" to="." method="_on_button_exit_pressed"]
